2004-09-07  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.h: Changed GIDS_HASH_SIZE from 1213 to 2053.

2004-09-03  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/remunge.c: Set stdout to be line buffered.
	* src/munge/remunge.c: Close stdin.
	* src/munge/remunge.c: Ignore SIGHUP.
	* src/munge/remunge.c: Changed DEF_DO_DECODE from 1 to 0.
	* src/munge/remunge.c: Subtract error count from number processed.

	* src/munged/hash.c: Changed HASH_ALLOC from 256 to 1024.
	* src/munged/replay.c: Changed REPLAY_ALLOC from 256 to 1024.
	* src/munged/replay.h: Changed REPLAY_HASH_SIZE from 4013 to 65537.

	* src/munged/gids.c, src/munged/gids.h: Added GIDS_HASH_SIZE.

	* src/munged/munged.c(main):
	  Changed default log priority level from LOG_NOTICE to LOG_INFO.

	* src/munged/conf.c(display_help): Added newline.

	* src/munge/munge.c(display_strings,str_to_int): Tweaked formatting.

	* src/munge/Makefile.am, src/munge/remunge.c: Added.

2004-08-26  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h, src/munged/job.c(job_accept):
	  Fix bug causing the daemon to crash if accept() exceeded the
	  open file descriptor limit for the process.

	* src/libmunge/ctx.c, src/libmunge/munge.h:
	  Added munge_ctx_copy().  Added docs wrt context function usage.

2004-08-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h:
	  Changed MUNGE_DEFAULT_ZIP from MUNGE_ZIP_ZLIB to MUNGE_ZIP_NONE.

2004-08-24  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/munge.c(destroy_conf): Removed unnecessary test for ctx.
	* src/munge/unmunge.c(destroy_conf): Removed unnecessary test for ctx.

2004-08-20  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/munge.c(parse_cmdline):
	  Check for overflow of time-to-live "-t" cmdline option.

	* src/munge/munge.c(parse_cmdline):
	  Changed strtol() err msg from log_errno() to log_err().

2004-08-19  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/munge.c, src/munge/unmunge.c: